I make responsive navbar.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $font-first: "sans-serif";
 // Colors
 $color-white: #fff;
 $color-black: #000;
+$color-cyan: rgba(0, 212, 255, 1);
 
 // Backgrounds
 $bg-color-gradient: linear-gradient(
