--- a/src/styles/routes/_home.scss
+++ b/src/styles/routes/_home.scss
@@ -1,10 +1,10 @@
 @use "../variables" as v;
 
 header {
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
 
-  @mixin mvh($medida: 710px) {
+  @mixin mvh($medida: 768px) {
     @media screen and (max-width: $medida) {
       @content;
     }
@@ -56,14 +56,7 @@ header {
       transform: translate(0px);
       animation: float 6s ease-out infinite;
       @include mvh() {
-        width: 35%;
-        height: 35%;
-      }
-      @include mvh(900px) {
-        padding-top: 30px;
-      }
-      @include mvh(800px) {
-        padding-top: 30px;
+        display: none;
       }
     }
   }
