--- a/src/styles/routes/_contact.scss
+++ b/src/styles/routes/_contact.scss
@@ -14,20 +14,24 @@ footer {
   .form-contact {
     background-color: v.$color-white;
     //filter: drop-shadow(0 0 0.35rem v.$color-white);
-    margin: 7rem 15rem 5rem 15rem;
-    padding: 20px;
+    margin: 7rem 15rem 4rem 15rem;
+    padding: 20px 20px 0px 20px;
     border-radius: 5px;
     @include mvc() {
-      margin: 10rem 5rem 10rem 5rem;
+      margin: 7rem 5rem 4rem 5rem;
+    }
+
+    fieldset {
+      border: none;
     }
 
     label {
       color: v.$color-black;
       font-family: v.$font-first;
-      font-size: 20px;
+      font-size: 21px;
     }
 
-    input,
+    .field,
     textarea {
       width: 100%;
       padding: 13px;
@@ -37,16 +41,16 @@ footer {
       margin-top: 6px;
       margin-bottom: 16px;
       resize: vertical;
-      font-size: 18px;
+      font-size: 19px;
       font-family: v.$font-first;
     }
 
-    input:focus {
+    .field:focus {
       outline: none;
       border-bottom: 1px solid rgb(183, 183, 4);
     }
 
-    input[type="submit"] {
+    .field[type="submit"] {
       background-color: rgb(4, 4, 99);
       color: v.$color-white;
       padding: 12px 20px;
@@ -55,17 +59,17 @@ footer {
       cursor: pointer;
     }
 
-    input[type="submit"]:hover {
+    .field[type="submit"]:hover {
       background-color: rgb(5, 5, 134);
     }
 
-    p {
+    .error-message {
       text-align: end;
       font-family: v.$font-first;
-      font-size: 17px;
+      font-size: 20px;
       color: red;
       padding-bottom: 5px;
-      display: none;
+      //display: none;
     }
   }
 
