Last changes and project finished.

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -80,6 +80,7 @@ nav {
     .buttons {
       color: v.$color-white;
       font-weight: 300;
+      font-size: 20px;
       text-decoration: none;
       margin-right: 25px;
       text-decoration: none;
