--- a/src/styles/routes/_contact.scss
+++ b/src/styles/routes/_contact.scss
@@ -63,6 +63,10 @@ footer {
       background-color: rgb(5, 5, 134);
     }
 
+    .field#comment{
+      height: 50px;
+    }
+
     .error-message {
       text-align: end;
       font-family: v.$font-first;
@@ -83,6 +87,10 @@ footer {
 
     .content-contact {
       text-align: center;
+      font-size: 19px;
+      @include mvc() {
+        font-size: 16px;
+      }
     }
 
     h4 {
@@ -99,8 +107,11 @@ footer {
 
   .title-final {
     text-align: center;
-    font-size: 24px;
+    font-size: 30px;
     margin: 20px 0px 15px 0px;
     color: v.$color-white;
+    @include mvc() {
+      font-size: 25px;
+    }
   }
 }
